crates/obs-macros/tests/trybuild/fail/L003_secret_on_log.stderr
error[E0080]: evaluation panicked: obs L003: field `api_key` is SECRET but tier is `log`
 --> tests/trybuild/fail/L003_secret_on_log.rs:5:26
  |
5 | #[derive(Debug, Default, Event)]
  |                          ^^^^^ evaluation of `_` failed here
